Добавлена прокрутка для тех компонентов, в которых она должна быть
Кроме admin/redactor/about.html в котором нужна структурная
перестройка блока, чтобы добавить прокрутку

--- a/admin/main/institutions.html
+++ b/admin/main/institutions.html
@@ -36,7 +36,7 @@
 
     </header>
 
-    <main class="main">
+    <main class="main overflow">
 
         <section class="main_list">
 
@@ -88,6 +88,76 @@
         <section class="main_list">
 
             <h3 class="main_list_h3">Модератор 2</h3>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
