--- a/admin/main/logs.html
+++ b/admin/main/logs.html
@@ -44,7 +44,43 @@
             <h3 class="main_h3">Дата</h3>
         </header>
 
-        <ul class="main_list">
+        <ul class="main_list overflow_small">
+
+            <li class="main_list_item">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+            </li>
+
+            <li class="main_list_item">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+            </li>
+
+            <li class="main_list_item">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+            </li>
+
+            <li class="main_list_item">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+            </li>
+
+            <li class="main_list_item">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+            </li>
+
+            <li class="main_list_item">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+            </li>
 
             <li class="main_list_item">
                 <p class="main_list_item_input"></p>
