admin/redactor/about.html .main_right Содержимое объединено в 3 блока

--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -96,25 +96,6 @@
 
         </div>
 
-        <div class="main_redactor_div main_right">
-
-            <p class="main_top-right_p_1">Иконка заведения:</p>
-            <p class="main_top-right_p_2">Название:</p>
-            <img src="../../res/img/main_top-right_img.png" alt="" class="main_top-right_img">
-            <input type="text" class="main_top-right_input">
-
-            <p class="main_right_p_1">Фон</p>
-            <img src="../../res/img/main_right_img.png" alt="" class="main_right_img">
-
-            <p class="main_right_p_2">Загрузка фона</p>
-            <button class="main_right_button_1">Обзор</button>
-            <button class="main_right_button_2">Загрузить</button>
-            <p class="main_right_p_3">Загрузка иконки</p>
-            <button class="main_right_button_3">Обзор</button>
-            <button class="main_right_button_4">Загрузить</button>
-
-        </div>
-
         <div class="main_redactor_div main_bottom">
 
             <p class="main_bottom_p">Адреса:</p>
@@ -135,6 +116,31 @@
             </ul>
 
             <button class="main_bottom_button">Добавить</button>
+
+        </div>
+
+        <div class="main_redactor_div main_right">
+
+            <div class="main_right_top">
+                <p class="main_top-right_p_1">Иконка заведения:</p>
+                <p class="main_top-right_p_2">Название:</p>
+                <img src="../../res/img/main_top-right_img.png" alt="" class="main_top-right_img">
+                <input type="text" class="main_top-right_input">
+            </div>
+
+            <div class="main_right_center">
+                <p class="main_right_p_1">Фон</p>
+                <img src="../../res/img/main_right_img.png" alt="" class="main_right_img">
+            </div>
+
+            <div class="main_right_bottom">
+                <p class="main_right_p_2">Загрузка фона</p>
+                <button class="main_right_button_1">Обзор</button>
+                <button class="main_right_button_2">Загрузить</button>
+                <p class="main_right_p_3">Загрузка иконки</p>
+                <button class="main_right_button_3">Обзор</button>
+                <button class="main_right_button_4">Загрузить</button>
+            </div>
 
         </div>
 
