admin/redactor/about.html .main_redactor_left Содержимое объединено ...
в 4 блока. Добавлена прокрутка

--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -41,81 +41,103 @@
 
     <main class="main main_redactor">
 
-        <div class="main_redactor_div main_top-left">
-            <input type="text" class="main_top-left_input">
-            <label class="main_top-left_label">
-                Доставка:
-                <input type="checkbox" class="main_top-left_check" checked>
-            </label>
-            <textarea class="main_top-left_textarea"></textarea>
-        </div>
+        <div class="main_redactor_left">
 
-        <div class="main_redactor_div main_top-center">
-            <input type="text" class="main_top-center_input">
-            <input type="text" class="main_top-center_input">
-            <input type="text" class="main_top-center_input">
-            <input type="text" class="main_top-center_input">
-            <input type="text" class="main_top-center_input">
-            <input type="text" class="main_top-center_input">
-        </div>
+            <div class="main_redactor_div main_top-left">
+                <input type="text" class="main_top-left_input">
+                <label class="main_top-left_label">
+                    Доставка:
+                    <input type="checkbox" class="main_top-left_check" checked>
+                </label>
+                <textarea class="main_top-left_textarea"></textarea>
+            </div>
 
-        <div class="main_redactor_div main_center">
+            <div class="main_redactor_div main_top-center">
+                <input type="text" class="main_top-center_input">
+                <input type="text" class="main_top-center_input">
+                <input type="text" class="main_top-center_input">
+                <input type="text" class="main_top-center_input">
+                <input type="text" class="main_top-center_input">
+                <input type="text" class="main_top-center_input">
+            </div>
 
-            <h3 class="main_center_h3">Режим работы заведения:</h3>
+            <div class="main_redactor_div main_center">
 
-            <div class="main_center_table">
+                <h3 class="main_center_h3">Режим работы заведения:</h3>
 
-                <p class="main_center_table_p"></p>
-                <p class="main_center_table_p">Пн</p>
-                <p class="main_center_table_p">Вт</p>
-                <p class="main_center_table_p">Ср</p>
-                <p class="main_center_table_p">Чт</p>
-                <p class="main_center_table_p">Пт</p>
-                <p class="main_center_table_p">Сб</p>
-                <p class="main_center_table_p">Вс</p>
+                <div class="main_center_table">
 
-                <p class="main_center_table_p">с</p>
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
+                    <p class="main_center_table_p"></p>
+                    <p class="main_center_table_p">Пн</p>
+                    <p class="main_center_table_p">Вт</p>
+                    <p class="main_center_table_p">Ср</p>
+                    <p class="main_center_table_p">Чт</p>
+                    <p class="main_center_table_p">Пт</p>
+                    <p class="main_center_table_p">Сб</p>
+                    <p class="main_center_table_p">Вс</p>
 
-                <p class="main_center_table_p">до</p>
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
-                <input type="text" class="main_center_table_input">
+                    <p class="main_center_table_p">с</p>
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+
+                    <p class="main_center_table_p">до</p>
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+                    <input type="text" class="main_center_table_input">
+
+                </div>
 
             </div>
 
-        </div>
+            <div class="main_redactor_div main_bottom">
 
-        <div class="main_redactor_div main_bottom">
+                <p class="main_bottom_p">Адреса:</p>
 
-            <p class="main_bottom_p">Адреса:</p>
+                <ul class="main_bottom_ul">
+                    <li class="main_bottom_li">
+                        <input type="checkbox" class="main_bottom_li_check" checked>
+                        <input type="text" class="main_bottom_li_input_1">
+                        <input type="text" class="main_bottom_li_input_2">
+                        <input type="text" class="main_bottom_li_input_3">
+                    </li>
+                    <li class="main_bottom_li">
+                        <input type="checkbox" class="main_bottom_li_check">
+                        <input type="text" class="main_bottom_li_input_1">
+                        <input type="text" class="main_bottom_li_input_2">
+                        <input type="text" class="main_bottom_li_input_3">
+                    </li>
+                    <li class="main_bottom_li">
+                        <input type="checkbox" class="main_bottom_li_check">
+                        <input type="text" class="main_bottom_li_input_1">
+                        <input type="text" class="main_bottom_li_input_2">
+                        <input type="text" class="main_bottom_li_input_3">
+                    </li>
+                    <li class="main_bottom_li">
+                        <input type="checkbox" class="main_bottom_li_check">
+                        <input type="text" class="main_bottom_li_input_1">
+                        <input type="text" class="main_bottom_li_input_2">
+                        <input type="text" class="main_bottom_li_input_3">
+                    </li>
+                    <li class="main_bottom_li">
+                        <input type="checkbox" class="main_bottom_li_check">
+                        <input type="text" class="main_bottom_li_input_1">
+                        <input type="text" class="main_bottom_li_input_2">
+                        <input type="text" class="main_bottom_li_input_3">
+                    </li>
+                </ul>
 
-            <ul class="main_bottom_ul">
-                <li class="main_bottom_li">
-                    <input type="checkbox" class="main_bottom_li_check" checked>
-                    <input type="text" class="main_bottom_li_input_1">
-                    <input type="text" class="main_bottom_li_input_2">
-                    <input type="text" class="main_bottom_li_input_3">
-                </li>
-                <li class="main_bottom_li">
-                    <input type="checkbox" class="main_bottom_li_check">
-                    <input type="text" class="main_bottom_li_input_1">
-                    <input type="text" class="main_bottom_li_input_2">
-                    <input type="text" class="main_bottom_li_input_3">
-                </li>
-            </ul>
+                <button class="main_bottom_button">Добавить</button>
 
-            <button class="main_bottom_button">Добавить</button>
+            </div>
 
         </div>
 
