--- a/moderator/redactor/main.html
+++ b/moderator/redactor/main.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../css/basic.css">
 </head>
-<body>
+<body class="moderator">
 
 <section class="container redactor">
 
