--- a/moderator/main/addModerator.html
+++ b/moderator/main/addModerator.html
@@ -18,13 +18,13 @@
             <h2 class="header_top_h2">Добавить Модератора</h2>
             <a href="#" class="header_top_button-back">Назад</a>
             <a href="#" class="header_top_button">Выход</a>
-            <p class="header_top_p">Администратор</p>
+            <p class="header_top_p">Модератор</p>
         </div>
 
         <nav class="header_nav">
             <a href="#" class="header_nav_button">Все заведения</a>
-            <a href="#" class="header_nav_button">Логи</a>
-            <a href="#" class="header_nav_button">Добавить Модератора</a>
+            <a href="#" class="header_nav_button header_nav_button-moder">-</a>
+            <a href="#" class="header_nav_button header_nav_button-moder">-</a>
             <a href="#" class="header_nav_button">Почта</a>
             <a href="#" class="header_nav_button">Настройки</a>
             <a href="#" class="header_nav_button">Добавить Заведение</a>
