--- a/moderator/redactor/menu/menu.html
+++ b/moderator/redactor/menu/menu.html
@@ -21,7 +21,7 @@
 
             <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span"> | bar_bochka</span></p>
             <div></div>
-            <p class="header_top_p">Администратор</p>
+            <p class="header_top_p">Модератор</p>
         </div>
 
         <nav class="header_nav">
