moderator/main Готова

--- a/moderator/main/addInstitution.html
+++ b/moderator/main/addInstitution.html
@@ -38,7 +38,7 @@
 
     <main class="main main-mod_1">
 
-        <h3 class="main_h3">Данные для обратной связи:</h3>
+        <h3 class="main_h3">Укажите данные</h3>
         <input type="text" class="main_input">
         <input type="text" class="main_input">
         <input type="text" class="main_input">
