--- a/moderator/redactor/about.html
+++ b/moderator/redactor/about.html
@@ -175,7 +175,7 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Обновить</button>
-            <button class="footer_content_button">Удалить</button>
+            <button class="footer_content_button footer_content_button-moderator">Удалить</button>
         </div>
 
     </footer>
