institutions/main.html+ Готов

--- a/institutions/mail.html
+++ b/institutions/mail.html
@@ -18,7 +18,7 @@
             <h2 class="header_top_h2">Почта</h2>
             <a href="#" class="header_top_button-back">Назад</a>
             <a href="#" class="header_top_button">Выход</a>
-            <p class="header_top_p">Администратор</p>
+            <p class="header_top_p header_top_p-inst">Администратор</p>
         </div>
 
         <nav class="header_nav">
@@ -81,7 +81,7 @@
         <div class="footer_content">
             <button class="footer_content_button">Отправить</button>
             <div></div>
-            <select class="footer_content_select">
+            <select class="footer_content_select footer_content_select-inst">
                 <option class="footer_content_option">Клиент 1</option>
                 <option class="footer_content_option">Клиент 2</option>
                 <option class="footer_content_option">Клиент 3</option>
