--- a/institutions/main.html
+++ b/institutions/main.html
@@ -19,9 +19,9 @@
             <div></div>
             <a href="#" class="header_top_button">Выход</a>
 
-            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span"> | bar_bochka</span></p>
+            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span header_top_p_span-inst"> | bar_bochka</span></p>
             <div></div>
-            <p class="header_top_p">Администратор</p>
+            <p class="header_top_p header_top_p-inst">Администратор</p>
         </div>
 
         <nav class="header_nav">
@@ -60,10 +60,10 @@
             <span class="footer_top_span"></span>
         </div>
         <div class="footer_content">
+            <button class="footer_content_help">Помощь</button>
             <div></div>
             <div></div>
-            <div></div>
-            <select class="footer_content_select">
+            <select class="footer_content_select footer_content_select-inst">
                 <option class="footer_content_option">Отображается</option>
                 <option class="footer_content_option">Не отображается</option>
             </select>
