institutions/about.html Готов

--- a/institutions/about.html
+++ b/institutions/about.html
@@ -146,13 +146,13 @@
             <div class="main_right_top">
                 <p class="main_top-right_p_1">Иконка заведения:</p>
                 <p class="main_top-right_p_2">Название:</p>
-                <img src="../../res/img/main_top-right_img.png" alt="" class="main_top-right_img">
+                <img src="../res/img/main_top-right_img.png" alt="" class="main_top-right_img">
                 <input type="text" class="main_top-right_input">
             </div>
 
             <div class="main_right_center">
                 <p class="main_right_p_1">Фон</p>
-                <img src="../../res/img/main_right_img.png" alt="" class="main_right_img">
+                <img src="../res/img/main_right_img.png" alt="" class="main_right_img">
             </div>
 
             <div class="main_right_bottom">
@@ -175,7 +175,7 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Обновить</button>
-            <button class="footer_content_button">Удалить</button>
+            <button class="footer_content_button footer_content_button-inst">Удалить</button>
         </div>
 
     </footer>
