--- a/institutions/help.html
+++ b/institutions/help.html
@@ -15,19 +15,22 @@
     <header class="header">
 
         <div class="header_top">
-            <h2 class="header_top_h2">Почта</h2>
+            <h2 class="header_top_h2">Помощь</h2>
             <a href="#" class="header_top_button-back">Назад</a>
             <a href="#" class="header_top_button">Выход</a>
+
+            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span header_top_p_span-inst"> | bar_bochka</span></p>
+            <div></div>
             <p class="header_top_p header_top_p-inst">Администратор</p>
         </div>
 
         <nav class="header_nav">
-            <a href="#" class="header_nav_button">Все заведения</a>
-            <a href="#" class="header_nav_button">Логи</a>
-            <a href="#" class="header_nav_button">Добавить Модератора</a>
-            <a href="#" class="header_nav_button">Почта</a>
+            <a href="#" class="header_nav_button blocked">Premium</a>
+            <a href="#" class="header_nav_button blocked">Доставка</a>
+            <a href="#" class="header_nav_button blocked">WEB-Viever</a>
+            <a href="#" class="header_nav_button">3D Меню</a>
+            <a href="#" class="header_nav_button">О заведении</a>
             <a href="#" class="header_nav_button">Настройки</a>
-            <a href="#" class="header_nav_button">Добавить Заведение</a>
         </nav>
 
         <div class="header_bottom">
