--- a/institutions/menu/menu.html
+++ b/institutions/menu/menu.html
@@ -49,7 +49,7 @@
                 <li class="main_left_li position">
                     <div class="position_left">
                         <p class="position_left_p">1. Блюдо</p>
-                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                        <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
                         <label class="position_right_label">
@@ -62,7 +62,7 @@
                 <li class="main_left_li position">
                     <div class="position_left">
                         <p class="position_left_p">2. Блюдо</p>
-                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                        <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
                         <label class="position_right_label">
@@ -75,7 +75,7 @@
                 <li class="main_left_li position">
                     <div class="position_left">
                         <p class="position_left_p">3. Блюдо</p>
-                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                        <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
                         <label class="position_right_label">
@@ -88,7 +88,7 @@
                 <li class="main_left_li position">
                     <div class="position_left">
                         <p class="position_left_p">4. Блюдо</p>
-                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                        <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
                         <label class="position_right_label">
@@ -101,7 +101,7 @@
                 <li class="main_left_li position">
                     <div class="position_left">
                         <p class="position_left_p">5. Блюдо</p>
-                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                        <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
                         <label class="position_right_label">
@@ -114,7 +114,7 @@
                 <li class="main_left_li position">
                     <div class="position_left">
                         <p class="position_left_p">6. Блюдо</p>
-                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                        <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
                         <label class="position_right_label">
@@ -127,7 +127,7 @@
             </ul>
         </div>
 
-        <div class="main_buttons">
+        <div class="main_buttons main_buttons-inst">
             <div class="main_buttons_wrapper">
                 <p class="main_buttons_p">Загрузка моделей Android</p>
                 <button class="main_buttons_btn_1">Обзор</button>
@@ -148,7 +148,7 @@
             <span class="footer_top_span"></span>
         </div>
         <div class="footer_content">
-            <button class="footer_content_button">Добавить</button>
+            <button class="footer_content_button footer_content_button-inst">Добавить</button>
         </div>
 
     </footer>
