--- a/institutions/menu/redMenu.html
+++ b/institutions/menu/redMenu.html
@@ -43,7 +43,7 @@
 
         <div class="maim_left maim_left-img">
             <p></p>
-            <img src="../../../res/img/main_top-right_img.png" alt="" class="maim_left-img_img">
+            <img src="../../res/img/main_top-right_img.png" alt="" class="maim_left-img_img">
             <h3 class="main_h3">Введите описание:</h3>
             <input type="text" class="main_input">
             <input type="text" class="main_input">
@@ -53,7 +53,7 @@
             <input type="text" class="main_input">
         </div>
 
-        <div class="main_buttons">
+        <div class="main_buttons main_buttons-inst">
             <div class="main_buttons_wrapper">
                 <p class="main_buttons_p">Загрузка иконки</p>
                 <button class="main_buttons_btn_1">Обзор</button>
@@ -70,7 +70,7 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Обновить</button>
-            <button class="footer_content_button">Удалить</button>
+            <button class="footer_content_button footer_content_button-inst">Удалить</button>
         </div>
 
     </footer>
