institutions/, moderator/ Удалены лишние файлы. Небольшой реф стилей

--- a/institutions/main.html
+++ b/institutions/main.html
@@ -19,9 +19,9 @@
             <div></div>
             <a href="#" class="header_top_button">Выход</a>
 
-            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span header_top_p_span-inst"> | bar_bochka</span></p>
+            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span inst_none"> | bar_bochka</span></p>
             <div></div>
-            <p class="header_top_p header_top_p-inst">Администратор</p>
+            <p class="header_top_p inst_none">Администратор</p>
         </div>
 
         <nav class="header_nav">
@@ -63,7 +63,7 @@
             <button class="footer_content_help">Помощь</button>
             <div></div>
             <div></div>
-            <select class="footer_content_select footer_content_select-inst">
+            <select class="footer_content_select inst_none">
                 <option class="footer_content_option">Отображается</option>
                 <option class="footer_content_option">Не отображается</option>
             </select>
