--- a/institutions/menu/menu.html
+++ b/institutions/menu/menu.html
@@ -19,9 +19,9 @@
             <a href="#" class="header_top_button">Назад</a>
             <a href="#" class="header_top_button">Выход</a>
 
-            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span header_top_p_span-inst"> | bar_bochka</span></p>
+            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span inst_none"> | bar_bochka</span></p>
             <div></div>
-            <p class="header_top_p header_top_p-inst">Администратор</p>
+            <p class="header_top_p inst_none">Администратор</p>
         </div>
 
         <nav class="header_nav">
@@ -127,7 +127,7 @@
             </ul>
         </div>
 
-        <div class="main_buttons main_buttons-inst">
+        <div class="main_buttons inst_none">
             <div class="main_buttons_wrapper">
                 <p class="main_buttons_p">Загрузка моделей Android</p>
                 <button class="main_buttons_btn_1">Обзор</button>
@@ -148,7 +148,7 @@
             <span class="footer_top_span"></span>
         </div>
         <div class="footer_content">
-            <button class="footer_content_button footer_content_button-inst">Добавить</button>
+            <button class="footer_content_button inst_none">Добавить</button>
         </div>
 
     </footer>
