--- a/institutions/menu/redMenu.html
+++ b/institutions/menu/redMenu.html
@@ -19,9 +19,9 @@
             <a href="#" class="header_top_button">Назад</a>
             <a href="#" class="header_top_button">Выход</a>
 
-            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span header_top_p_span-inst"> | bar_bochka</span></p>
+            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span inst_none"> | bar_bochka</span></p>
             <div></div>
-            <p class="header_top_p header_top_p-inst">Администратор</p>
+            <p class="header_top_p inst_none">Администратор</p>
         </div>
 
         <nav class="header_nav">
@@ -53,7 +53,7 @@
             <input type="text" class="main_input">
         </div>
 
-        <div class="main_buttons main_buttons-inst">
+        <div class="main_buttons inst_none">
             <div class="main_buttons_wrapper">
                 <p class="main_buttons_p">Загрузка иконки</p>
                 <button class="main_buttons_btn_1">Обзор</button>
@@ -70,7 +70,7 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Обновить</button>
-            <button class="footer_content_button footer_content_button-inst">Удалить</button>
+            <button class="footer_content_button inst_none">Удалить</button>
         </div>
 
     </footer>
