--- a/moderator/main/institutions.html
+++ b/moderator/main/institutions.html
@@ -46,21 +46,21 @@
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
         </section>
@@ -73,14 +73,14 @@
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
         </section>
@@ -93,77 +93,77 @@
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
             <div class="main_list_item">
                 <input type="text" class="main_list_item_input">
                 <input type="text" class="main_list_item_input">
                 <button class="main_list_item_button">Пароль</button>
-                <button class="main_list_item_button main_list_item_button-moderator">Удалить</button>
+                <button class="main_list_item_button moder_none">Удалить</button>
             </div>
 
         </section>
