--- a/institutions/settings.html
+++ b/institutions/settings.html
@@ -19,9 +19,9 @@
             <a href="#" class="header_top_button">Назад</a>
             <a href="#" class="header_top_button">Выход</a>
 
-            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span header_top_p_span-inst"> | bar_bochka</span></p>
+            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span inst_none"> | bar_bochka</span></p>
             <div></div>
-            <p class="header_top_p header_top_p-inst">Администратор</p>
+            <p class="header_top_p inst_none">Администратор</p>
         </div>
 
         <nav class="header_nav">
