--- a/moderator/redactor/menu/redMenu.html
+++ b/moderator/redactor/menu/redMenu.html
@@ -70,7 +70,7 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Обновить</button>
-            <button class="footer_content_button footer_content_button-moderator">Удалить</button>
+            <button class="footer_content_button moder_none">Удалить</button>
         </div>
 
     </footer>
