menu.html Убрали сцепку между label и checkbox

--- a/institutions/menu/menu.html
+++ b/institutions/menu/menu.html
@@ -52,10 +52,8 @@
                         <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
-                        <label class="position_right_label">
-                            Изменить
-                            <input type="checkbox" class="position_right_check">
-                        </label>
+                        <p class="position_right_label">Изменить</p>
+                        <input type="checkbox" class="position_right_check">
                     </div>
                 </li>
 
@@ -65,10 +63,8 @@
                         <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
-                        <label class="position_right_label">
-                            Изменить
-                            <input type="checkbox" class="position_right_check">
-                        </label>
+                        <p class="position_right_label">Изменить</p>
+                        <input type="checkbox" class="position_right_check">
                     </div>
                 </li>
 
@@ -78,10 +74,8 @@
                         <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
-                        <label class="position_right_label">
-                            Изменить
-                            <input type="checkbox" class="position_right_check">
-                        </label>
+                        <p class="position_right_label">Изменить</p>
+                        <input type="checkbox" class="position_right_check">
                     </div>
                 </li>
 
@@ -91,10 +85,8 @@
                         <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
-                        <label class="position_right_label">
-                            Изменить
-                            <input type="checkbox" class="position_right_check">
-                        </label>
+                        <p class="position_right_label">Изменить</p>
+                        <input type="checkbox" class="position_right_check">
                     </div>
                 </li>
 
@@ -104,10 +96,8 @@
                         <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
-                        <label class="position_right_label">
-                            Изменить
-                            <input type="checkbox" class="position_right_check">
-                        </label>
+                        <p class="position_right_label">Изменить</p>
+                        <input type="checkbox" class="position_right_check">
                     </div>
                 </li>
 
@@ -117,10 +107,8 @@
                         <img src="../../res/img/main_top-right_img.png" alt="" class="position_right_img">
                     </div>
                     <div class="position_right">
-                        <label class="position_right_label">
-                            Изменить
-                            <input type="checkbox" class="position_right_check">
-                        </label>
+                        <p class="position_right_label">Изменить</p>
+                        <input type="checkbox" class="position_right_check">
                     </div>
                 </li>
 
